Bug fixes: multilingual tags, datetime styling on Firefox

--- a/source/client/ui/explorer/styles.scss
+++ b/source/client/ui/explorer/styles.scss
@@ -1274,6 +1274,11 @@ $tour-entry-indent: 12px;
       cursor: pointer;
       transition: all common.$tx-short;
 
+      @supports (-moz-appearance:none) {
+          word-spacing: -6px;
+          letter-spacing: -1px;
+      }
+
       &:hover {
         background-color: color.adjust(common.$color-background-lighter, $lightness: 5%);
         box-shadow: 0 0 4px color.adjust(common.$color-primary, $alpha: -0.5);
